--- a/lottery-admin/src/main/resources/templates/account-change-log.html
+++ b/lottery-admin/src/main/resources/templates/account-change-log.html
@@ -23,21 +23,21 @@
 	<div id="account-change-log" v-cloak>
 		<form class="form-inline common-query-cond-form" action="#">
 			<div class="form-group common-query-cond">
-				<label>游戏:</label> <select class="form-control" v-model="accountChangeGameCode">
+				<label>游戏:</label> <select class="form-control-sm" v-model="accountChangeGameCode">
 					<option value="">所有游戏</option>
 					<option v-for="dictItem in gameDictItems" :value="dictItem.dictItemCode">{{dictItem.dictItemName}}</option>
 				</select>
 			</div>
 			<div class="form-group common-query-cond">
-				<label>时间:</label><input type="date" class="form-control" v-model="accountChangeStartTime"><span>到</span><input type="date" class="form-control" v-model="accountChangeEndTime">
+				<label>时间:</label><input type="date" class="form-control-sm" v-model="accountChangeStartTime"><span>到</span><input type="date" class="form-control-sm" v-model="accountChangeEndTime">
 			</div>
 			<div class="form-group common-query-cond">
-				<label>账变类型:</label> <select class="form-control" v-model="accountChangeTypeCode">
+				<label>账变类型:</label> <select class="form-control-sm" v-model="accountChangeTypeCode">
 					<option value="">请选择</option>
 					<option v-for="dictItem in accountChangeTypeDictItems" :value="dictItem.dictItemCode">{{dictItem.dictItemName}}</option>
 				</select>
 			</div>
-			<button type="button" class="btn btn-danger" v-on:click="refreshTable">搜索</button>
+			<button type="button" class="btn btn-danger btn-sm" v-on:click="refreshTable">搜索</button>
 		</form>
 		<table class="common-table account-change-log-table"></table>
 	</div>
