--- a/lottery-admin/src/main/resources/templates/config-manage.html
+++ b/lottery-admin/src/main/resources/templates/config-manage.html
@@ -23,15 +23,15 @@
 	<div id="config-manage" v-cloak>
 		<form class="form-inline common-query-cond-form" action="#">
 			<div class="form-group common-query-cond">
-				<label>配置项code:</label><input type="text" class="form-control" v-model="configCode">
+				<label>配置项code:</label><input type="text" class="form-control-sm" v-model="configCode">
 			</div>
 			<div class="form-group common-query-cond">
-				<label>配置项名称:</label><input type="text" class="form-control" v-model="configName">
+				<label>配置项名称:</label><input type="text" class="form-control-sm" v-model="configName">
 			</div>
-			<button type="button" class="btn btn-danger" v-on:click="refreshTable">搜索</button>
+			<button type="button" class="btn btn-danger btn-sm" v-on:click="refreshTable">搜索</button>
 		</form>
 		<form class="form-inline common-query-cond-form float-right" action="#">
-			<button type="button" class="btn btn-info " v-on:click="openAddConfigModal">新增配置项</button>
+			<button type="button" class="btn btn-info btn-sm" v-on:click="openAddConfigModal">新增配置项</button>
 		</form>
 		<table class="common-table config-manage-table"></table>
 
