--- a/lottery-admin/src/main/resources/templates/login-log.html
+++ b/lottery-admin/src/main/resources/templates/login-log.html
@@ -2,57 +2,45 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
-<title>投注记录</title>
+<title>登录日志</title>
 <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.1.0/css/bootstrap.min.css">
 <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdn.staticfile.org/popper.js/1.12.5/umd/popper.min.js"></script>
 <script src="https://cdn.staticfile.org/twitter-bootstrap/4.1.0/js/bootstrap.min.js"></script>
 <script src="https://cdn.staticfile.org/vue/2.4.2/vue.min.js"></script>
 <script src="https://cdn.staticfile.org/vue-resource/1.5.1/vue-resource.min.js"></script>
+<script src="https://cdn.bootcss.com/dayjs/1.7.8/dayjs.min.js"></script>
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.13.1/bootstrap-table.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.13.1/bootstrap-table.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.13.1/locale/bootstrap-table-zh-CN.min.js"></script>
-<script src="https://cdn.bootcss.com/dayjs/1.7.8/dayjs.min.js"></script>
 <link href="/css/common/common.css" rel="stylesheet" type="text/css">
 <style type="text/css">
-.betting-record-table .betting-record-order-no {
-	color: #2765a1;
-	cursor: pointer;
-}
-
-.betting-record-table .betting-record-state {
-	color: #ec494c;
-}
 </style>
 </head>
+
 <body>
 	<div th:replace="common/header::html"></div>
-	<div id="betting-record" v-cloak>
+	<div id="login-log" v-cloak>
 		<form class="form-inline common-query-cond-form" action="#">
 			<div class="form-group common-query-cond">
-				<label>订单号:</label><input type="text" class="form-control-sm" v-model="orderNo">
+				<label>登录用户名:</label><input type="text" class="form-control-sm" v-model="userName">
 			</div>
 			<div class="form-group common-query-cond">
-				<label>游戏:</label> <select class="form-control-sm" v-model="gameCode">
-					<option value="">全部游戏</option>
-					<option v-for="dictItem in gameDictItems" :value="dictItem.dictItemCode">{{dictItem.dictItemName}}</option>
+				<label>ip地址:</label><input type="text" class="form-control-sm" v-model="ipAddr">
+			</div>
+			<div class="form-group common-query-cond">
+				<label>登录状态:</label> <select class="form-control-sm" v-model="state">
+					<option value="">所有</option>
+					<option v-for="dictItem in loginStateDictItems" :value="dictItem.dictItemCode">{{dictItem.dictItemName}}</option>
 				</select>
 			</div>
 			<div class="form-group common-query-cond">
-				<label>时间:</label><input type="date" class="form-control-sm" v-model="startTime"><span>到</span><input type="date" class="form-control-sm" v-model="endTime">
-			</div>
-			<div class="form-group common-query-cond">
-				<label>状态:</label> <select class="form-control-sm" v-model="state">
-					<option value="">全部</option>
-					<option v-for="dictItem in bettingOrderStateDictItems" :value="dictItem.dictItemCode">{{dictItem.dictItemName}}</option>
-				</select>
+				<label>登录时间:</label><input type="date" class="form-control-sm" v-model="startTime"><span>到</span><input type="date" class="form-control-sm" v-model="endTime">
 			</div>
 			<button type="button" class="btn btn-danger btn-sm" v-on:click="refreshTable">搜索</button>
 		</form>
-		<table class="common-table betting-record-table"></table>
+		<table class="common-table login-log-table"></table>
 	</div>
-	<div th:replace="component/betting-order-details-modal::html"></div>
-	<div th:replace="component/change-order-modal::html"></div>
-	<script src="/js/betting-record.js"></script>
+	<script src="/js/login-log.js"></script>
 </body>
 </html>
