--- a/lottery-admin/src/main/resources/templates/lottery-situation.html
+++ b/lottery-admin/src/main/resources/templates/lottery-situation.html
@@ -27,24 +27,24 @@
 	<div id="issue-manage" v-cloak>
 		<form class="form-inline common-query-cond-form" action="#">
 			<div class="form-group common-query-cond">
-				<label>游戏:</label> <select class="form-control" v-model="gameCode">
+				<label>游戏:</label> <select class="form-control-sm" v-model="gameCode">
 					<option value="">全部游戏</option>
 					<option v-for="dictItem in gameDictItems" :value="dictItem.dictItemCode">{{dictItem.dictItemName}}</option>
 				</select>
 			</div>
 			<div class="form-group common-query-cond">
-				<label>期数:</label><input type="text" class="form-control" v-model="issueNum">
+				<label>期数:</label><input type="text" class="form-control-sm" v-model="issueNum">
 			</div>
 			<div class="form-group common-query-cond">
-				<label>状态:</label> <select class="form-control" v-model="state">
+				<label>状态:</label> <select class="form-control-sm" v-model="state">
 					<option value="">全部状态</option>
 					<option v-for="dictItem in issueStateDictItems" :value="dictItem.dictItemCode">{{dictItem.dictItemName}}</option>
 				</select>
 			</div>
 			<div class="form-group common-query-cond">
-				<label>开奖日期:</label><input type="date" class="form-control" v-model="lotteryStartDate"><span>到</span><input type="date" class="form-control" v-model="lotteryEndDate">
+				<label>开奖日期:</label><input type="date" class="form-control-sm" v-model="lotteryStartDate"><span>到</span><input type="date" class="form-control-sm" v-model="lotteryEndDate">
 			</div>
-			<button type="button" class="btn btn-danger" v-on:click="refreshTable">搜索</button>
+			<button type="button" class="btn btn-danger btn-sm" v-on:click="refreshTable">搜索</button>
 		</form>
 		<table class="common-table lottery-situation-table"></table>
 
