--- a/lottery-admin/src/main/resources/templates/common/header.html
+++ b/lottery-admin/src/main/resources/templates/common/header.html
@@ -81,14 +81,18 @@
 						name : '账号管理',
 						url : '/account-manage'
 					}, {
-						name : '邀请码',
-						url : ''
-					}, {
 						name : '账变日志',
 						url : '/account-change-log'
 					}, {
 						name : '登录日志',
 						url : '/login-log'
+					} ]
+				}, {
+					name : '代理中心',
+					url : '',
+					subMenus : [ {
+						name : '返点表',
+						url : '/rebate-list'
 					} ]
 				}, {
 					name : '充值提现',
