--- a/lottery-web/src/main/resources/templates/recharge.html
+++ b/lottery-web/src/main/resources/templates/recharge.html
@@ -105,7 +105,7 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-10 offset-sm-2 recharge-form-item recharge-account-item">
-						<label>充值账号</label> <span>{{header.userName}}</span>
+						<label>充值账号</label> <span>{{headerVM.userName}}</span>
 					</div>
 				</div>
 				<div class="row">
