--- a/lottery-web/src/main/resources/static/css/common/ssc.css
+++ b/lottery-web/src/main/resources/static/css/common/ssc.css
@@ -487,10 +487,22 @@
 	outline: none;
 }
 
+.odds-and-rebate {
+	line-height: 26px;
+	color: #666;
+	font-size: 13px;
+}
+
+.odds-and-rebate input {
+	height: 9px;
+	cursor: pointer;
+}
+
 .multiple-total {
 	line-height: 26px;
 	color: #666;
 	font-size: 13px;
+	text-align: start;
 }
 
 .betting-count, .betting-amount {
@@ -631,38 +643,6 @@
 	text-align: right;
 }
 
-.modal-mask {
-	position: fixed;
-	z-index: 9998;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	display: table;
-	transition: opacity .3s ease;
-}
-
-.modal-wrapper {
-	display: table-cell;
-	vertical-align: middle;
-}
-
-.betting-record-details-dialog {
-	max-width: 100%;
-	width: 50%;
-}
-
-.betting-summary-title {
-	margin-bottom: 20px;
-	padding-left: 10px;
-	border-left: 3px solid #3080fe;
-}
-
-.betting-record-details-item label {
-	color: #666;
-	padding-right: 4px;
-}
-
-.betting-record-details-highlight-item span {
-	color: #E37D23;
+#ex1Slider .slider-selection {
+	background: #BABABA;
 }
