--- a/lottery-web/src/main/resources/templates/withdraw.html
+++ b/lottery-web/src/main/resources/templates/withdraw.html
@@ -58,7 +58,7 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-9 offset-sm-3 withdraw-form-item withdraw-form-highlight-item">
-						<label>可用余额</label> <span>{{header.balance}}</span>
+						<label>可用余额</label> <span>{{headerVM.balance}}</span>
 					</div>
 				</div>
 				<div class="row">
