后台维护返点/赔率

--- a/lottery-admin/src/main/resources/templates/common/header.html
+++ b/lottery-admin/src/main/resources/templates/common/header.html
@@ -91,8 +91,8 @@
 					name : '代理中心',
 					url : '',
 					subMenus : [ {
-						name : '返点表',
-						url : '/rebate-list'
+						name : '返点/赔率',
+						url : '/rebate-and-odds'
 					} ]
 				}, {
 					name : '充值提现',
