--- a/lottery-web/src/main/resources/templates/common/personal-navbar.html
+++ b/lottery-web/src/main/resources/templates/common/personal-navbar.html
@@ -43,7 +43,7 @@
 						<li class="nav-item" v-bind:class="{'selected-personal-nav-item': currentPathName == '/withdraw'}" v-on:click="navTo('/withdraw')"><a class="nav-link">线上提现</a></li>
 						<li class="nav-item" v-bind:class="{'selected-personal-nav-item': currentPathName == '/betting-record'}" v-on:click="navTo('/betting-record')"><a class=" nav-link">投注记录</a></li>
 						<li class="nav-item" v-bind:class="{'selected-personal-nav-item': currentPathName == '/tracking-number-record'}" v-on:click="navTo('/tracking-number-record')"><a class="nav-link">追号记录</a></li>
-						<li class="nav-item"><a class="nav-link">代理中心</a></li>
+						<li class="nav-item" v-bind:class="{'selected-personal-nav-item': currentPathName == '/agent-center'}" v-on:click="navTo('/agent-center')"><a class="nav-link">代理中心</a></li>
 						<li class="nav-item"><a class="nav-link">站内信</a></li>
 					</ul>
 				</nav>
